Update loading screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container>
+<mat-sidenav-container id="sidenav-container">
   <mat-sidenav id="sidenav" #sidenav role="navigation">
     <nav>
       <a mat-raised-button color="primary" routerLink="/space">Space Mode</a>
