--- a/src/app/space/space.component.html
+++ b/src/app/space/space.component.html
@@ -1,4 +1,8 @@
-<div #loadingElement>
-  <mat-spinner></mat-spinner>
+<div #loadingContainer id="loadingContainer">
+  <pre id="loadingText">
+    STAR TRAK
+    LOADING...
+  </pre>
+  <mat-spinner id="spinner"></mat-spinner>
 </div>
 <div #rendererContainer></div>
