Add loading image

--- a/src/app/space/space.component.html
+++ b/src/app/space/space.component.html
@@ -1,7 +1,8 @@
 <div #loadingContainer id="loadingContainer">
   <pre id="loadingText">
     STAR TRAK
-    LOADING...
+
+    Track Starlink Satellites in real time
   </pre>
   <mat-spinner id="spinner"></mat-spinner>
 </div>
