--- a/src/app/space/space.component.css
+++ b/src/app/space/space.component.css
@@ -2,6 +2,11 @@
   height: 100%;
   width: auto;
   display: grid;
+  background-image: url('../../assets/ISS062-E-148365.JPG');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 #loadingText {
@@ -9,6 +14,8 @@
   grid-column: 0;
   margin: auto;
   color: greenyellow;
+  font-family: inherit;
+  font-size: large;
 }
 
 #spinner {
