Simplify sensor wiring, Update theme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <mat-sidenav id="sidenav" #sidenav role="navigation">
     <nav>
       <a mat-raised-button color="accent" routerLink="/space">Space Mode</a>
-      <a [disabled]="isObserverDisabled" mat-raised-button color="accent" routerLink="/observer">Observer Mode</a>
+      <a mat-raised-button color="accent" routerLink="/observer">Observer Mode</a>
     </nav>
     <a mat-raised-button color="primary" href="https://github.com/MNahad">POWERED BY @MNAHAD</a>
   </mat-sidenav>
