--- a/src/app/observer/observer.component.html
+++ b/src/app/observer/observer.component.html
@@ -1,12 +1,14 @@
 <div id="container">
   <video #videoElement [hidden]="!observerEnabled" autoplay="" playsinline=""></video>
   <canvas #observerCanvas id="canvas" [hidden]="!observerEnabled"></canvas>
+  <canvas #hudCanvas id="hud" [hidden]="!observerEnabled"></canvas>
   <pre id="disabledText" [hidden]="observerEnabled">
     Sorry, but you need to have certain features enabled:
-    - Camera
-    - Accelerometer
-    - Gyroscope
-    - Magnetometer (for sensing initial direction)
-    - Geolocation (for setting initial location)
+
+    Camera
+    Accelerometer
+    Gyroscope
+    Magnetometer (for sensing initial direction)
+    Geolocation (for setting initial location)
   </pre>
 </div>
